--- a/app/views/sequences/_form.html.haml
+++ b/app/views/sequences/_form.html.haml
@@ -2,7 +2,7 @@
   -f.error :sequence
   -f.title :subtitle
   -f.field :sequence, :name
-  -f.field :sequence, :format, :class=>:code
+  -f.field :sequence, :number_format, :class=>:code
   -f.field :sequence, :period, :choices=>Sequence.periods
   -f.field :sequence, :number_increment
   -f.field :sequence, :number_start
