--- a/app/views/drugs/_form.html.haml
+++ b/app/views/drugs/_form.html.haml
@@ -4,4 +4,5 @@
   -input :name , :hint => "le nom de votre médicament"# affiche le champ name de l entité animal avec une infos derriere
   -input :frequency
   -input :quantity
+  -input :prescripted
   -input :comment, :field => :text # affiche le champ comment formaté en zone de texte
