--- a/app/views/animal_drugs/show.html.haml
+++ b/app/views/animal_drugs/show.html.haml
@@ -1,8 +1,8 @@
 =toolbar do |t|
-  -t.edit @drug
-  -t.destroy(@drug, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @drug.destroyable?
+  -t.edit @animal_drug
+  -t.destroy(@animal_drug, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_drug.destroyable?
 
-=attributes_list(@drug) do |l| # liste des champs à afficher
+=attributes_list(@animal_drug) do |l| # liste des champs à afficher
   -l.attribute :name
   -l.attribute :nature, :url => true
   -l.attribute :frequency
