--- a/app/views/sequences/_form.html.haml
+++ b/app/views/sequences/_form.html.haml
@@ -1,7 +1,8 @@
 -field_set do
   -input :name
-  -input :number_format, :class=>:code
-  -input :period, :choices=>Sequence.periods
+  -input :usage
+  -input :number_format
+  -input :period
   -input :number_increment
   -input :number_start
   -input :last_number
