correcting fixtures to be able to pass integration and unit test

--- a/app/views/animal_drug_natures/_form.html.haml
+++ b/app/views/animal_drug_natures/_form.html.haml
@@ -1,2 +1,2 @@
 -field_set do # partie info general de l entité animal
-  =f.input :name , :hint => "le nom du nature de médicament"# affiche le champ name de l entité animal avec une infos derriere
+  -input :name , :hint => "le nom du nature de médicament"# affiche le champ name de l entité animal avec une infos derriere
